# genetic_trade

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binance_column_names.py  column_names.py  engine.py  evolve.ipynb  order.py  params.txt  position.py  results.txt  trade.ipynb  usdt.py
params/: 484.txt  516.txt
src/: candle.hpp  order.hpp  position.hpp  rnn_trader.cpp  signal.hpp  spot.cpp  spot.hpp  trader.hpp
src/nn/: linear.hpp  lstm.hpp  rnn.hpp  simplernn.hpp
tests/: CMakeLists.txt  test_equity_history.cpp  test_nn_linear.cpp
